<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidIRC</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="title_activity_client">ClientActivity</string>

    <!-- Menu items -->
    <string name="action_disconnect">Disconnect</string>
    <string name="action_join_channel">Join Channel</string>
    <string name="action_leave_channel">Leave Channel</string>
    <string name="action_user_list">User List</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <!-- Strings used for the Home screen -->
    <string name="droid">Droid</string>
    <string name="irc">IRC</string>
    <string name="choose">Choose how to begin.</string>
    <string name="create">Create</string>
    <string name="join">Join</string>

    <!-- Strings for the StartServerDialogFragment and JoinServerDialogFragment -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="server_settings">Server Settings</string>
    <string name="server_name">Server Name</string>
    <string name="port">Port</string>
    <string name="nickname">Nickname</string>
    <string name="address">IP Address</string>

    <!-- Strings for DisconnectDialog -->
    <string name="server_disconnect_title">Stop Server</string>
    <string name="server_disconnect_message">Are you sure you want to stop the server?</string>
    <string name="client_disconnect_title">Disconnect From Server</string>
    <string name="client_disconnect_message">Are you sure you want to disconnect from the server?</string>

    <!-- Strings for ServerErrorDialog -->
    <string name="server_error_title">Error!</string>
    <string name="server_error_message">Sorry, a server error was encountered.</string>

    <!-- Strings for ExitDialog -->
    <string name="exit_app_title">Exit</string>
    <string name="exit_app_message">Are you sure you want to exit DroidIRC?</string>

    <!-- Strings for JoinChannelDialog -->
    <string name="join_channel_title">Join Channel</string>
    <string name="channel">Channel</string>

    <!-- Strings for UserListDialog -->
    <string name="user_list">User List</string>

    <!-- Strings for ServerClosedDialog -->
    <string name="server_closed_title">Server Shutdown!</string>
    <string name="server_closed_message">Sorry, the server was shutdown!</string>
</resources>
