<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/action_disconnect"
        android:icon="@drawable/ic_action_disconnect"
        app:showAsAction="ifRoom"/>

    <group
        android:id="@+id/join_channel_group">
        <item
            android:id="@+id/action_join_channel"
            android:title="@string/action_join_channel"
            android:icon="@drawable/ic_action_join_channel"
            app:showAsAction="ifRoom"/>
    </group>

    <group
        android:id="@+id/leave_channel_group">
        <item
            android:id="@+id/action_leave_channel"
            android:title="@string/action_leave_channel"
            android:icon="@drawable/ic_action_leave_channel"
            app:showAsAction="ifRoom"/>
    </group>

    <item
        android:id="@+id/action_user_list"
        android:title="@string/action_user_list"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
